--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
             </div>
 
             <div class="project-card bg-white rounded-xl shadow-md overflow-hidden border border-gray-200">
-                <img src="https://placehold.co/600x400/e0ffe7/334155?text=EchoSonia" alt="EchoSonia" class="w-full h-56 object-cover">
+                <img src="https://podcast-farm.com/projects/gitsite/echosoniascreen.png" alt="EchoSonia" class="w-full h-56 object-cover">
                 <div class="p-6">
                     <h3 class="text-2xl font-semibold mb-3 text-gray-800">EchoSonia</h3>
                     <p class="text-gray-600 mb-4">A first-person WebXR exploration game where players navigate a dark environment using echolocation mechanics. Features immersive VR support, dynamic particle-based sound visualization, power-ups that modify echo behavior, and physics-based projectile interactions, all built with Three.js, WebXR, and the Web Audio API.</p>
