--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
         <div class="relative z-10 text-center fade-in">
             <h1 class="text-5xl md:text-7xl font-extrabold mb-4 leading-tight">Hello, I'm <span class="text-yellow-300">K-Lee</span>.</h1>
-            <p class="text-xl md:text-2xl font-light mb-8 max-w-2xl mx-auto">A passionate creative developing innovative tools and experiences that inspire and solve challenges.</p>
+            <p class="text-xl md:text-2xl font-light mb-8 max-w-2xl mx-auto">Human-Centered Product Manager | Building Tools That Enhance Creativity, Wellbeing & Human Potential</p>
             <div class="flex flex-col sm:flex-row justify-center space-y-4 sm:space-y-0 sm:space-x-4">
                 <a href="#portfolio" class="btn bg-white text-blue-600 px-8 py-3 rounded-full shadow-lg hover:bg-gray-100 font-semibold text-lg">View My Work</a>
                 <a href="#contact" class="btn border border-white text-white px-8 py-3 rounded-full hover:bg-white hover:text-blue-600 font-semibold text-lg">Get In Touch</a>
