--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             </div>
             <div class="md:w-2/3 text-lg text-gray-700">
                 <p class="mb-4">
-                    Hi there! I'm <strong class="text-blue-600">Christopher K-Lee Marks</strong>, a Founder, Educator, Creative Technologist, and Relationship Coach with a passion for designing tools and experiences that foster human connection, personal growth, and creative expression. I love transforming soulful ideas into tangible products that make a real difference—whether it's through music, apps, coaching, or education.
+                    Hi there! I'm <strong class="text-blue-600">Christopher K-Lee Marks</strong>, a Founder, Educator, Product Manager, and Relationship Coach with a passion for designing tools and experiences that foster human connection, personal growth, and creative expression. I love transforming soulful ideas into tangible products that make a real difference—whether it's through music, apps, coaching, or education.
                 </p>
                 <p class="mb-4">
                     My journey in creative technology and transformation work began over a decade ago when I built a community recording studio in rural Mexico. Since then, I've worked on a wide range of projects—from AI-driven learning platforms to music licensing and podcasting services, honing my skills in product development, digital storytelling, and emotional intelligence coaching.
