--- a/index.html
+++ b/index.html
@@ -350,6 +350,24 @@
                 </div>
             </div>
 
+            <div class="project-card bg-white rounded-xl shadow-md overflow-hidden border border-gray-200">
+                <img src="https://placehold.co/600x400/fce7f3/831843?text=Relationship+Safety+Check" alt="The Relationship Safety Check" class="w-full h-56 object-cover">
+                <div class="p-6">
+                    <h3 class="text-2xl font-semibold mb-3 text-gray-800">The Relationship Safety Check</h3>
+                    <p class="text-gray-600 mb-4">A science-driven interactive assessment inspired by IPV warning-sign research. This tool helps individuals evaluate relationship dynamics through evidence-based indicators, providing personalized insights and resources for relationship health and safety awareness.</p>
+                    <div class="flex flex-wrap gap-2 mb-4">
+                        <span class="bg-purple-100 text-purple-800 text-xs font-medium px-3 py-1 rounded-full">Interactive Assessment</span>
+                        <span class="bg-purple-100 text-purple-800 text-xs font-medium px-3 py-1 rounded-full">IPV Research</span>
+                        <span class="bg-purple-100 text-purple-800 text-xs font-medium px-3 py-1 rounded-full">Relationship Health</span>
+                        <span class="bg-purple-100 text-purple-800 text-xs font-medium px-3 py-1 rounded-full">Data Visualization</span>
+                    </div>
+                    <div class="flex space-x-4">
+                        <a href="relationship-radar.html" class="btn bg-blue-600 text-white px-5 py-2 rounded-full text-sm font-semibold hover:bg-blue-700 shadow-md">Try Assessment</a>
+                        <a href="#" target="_blank" class="btn border border-blue-600 text-blue-600 px-5 py-2 rounded-full text-sm font-semibold hover:bg-blue-50 hover:text-blue-700">GitHub Repo</a>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </section>
 
