--- a/index.html
+++ b/index.html
@@ -438,28 +438,23 @@
         </div>
     </section>
 
-    <section id="contact" class="py-16 md:py-24 px-4 sm:px-6 lg:px-8 max-w-4xl mx-auto text-center fade-in">
-        <h2 class="text-4xl font-bold mb-8 text-gray-800">Get In Touch</h2>
-        <p class="text-lg text-gray-700 mb-8">
+    <section id="contact" class="py-24 md:py-32 px-4 sm:px-6 lg:px-8 text-center bg-white" data-aos="fade-up">
+        <h2 class="text-5xl font-bold mb-6 text-gray-800">Get In Touch</h2>
+        <p class="text-xl text-gray-600 mb-10 max-w-2xl mx-auto">
             I'm always open to new opportunities, collaborations, or just a friendly chat! Feel free to reach out.
         </p>
         <div class="flex flex-col sm:flex-row justify-center space-y-4 sm:space-y-0 sm:space-x-6">
-            <a href="mailto:your.email@example.com" class="btn bg-green-600 text-white px-8 py-3 rounded-full shadow-lg hover:bg-green-700 font-semibold text-lg flex items-center justify-center">
-                <svg class="w-5 h-5 mr-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z"></path><path d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z"></path></svg>
-                Email Me
-            </a>
-            <a href="https://www.linkedin.com/in/k-lee-marks-3693512b/" target="_blank" class="btn border border-blue-600 text-blue-600 px-8 py-3 rounded-full hover:bg-blue-50 font-semibold text-lg flex items-center justify-center">
-                <svg class="w-5 h-5 mr-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M16.3 0H3.7C1.65 0 0 1.65 0 3.7v12.6C0 18.35 1.65 20 3.7 20h12.6c2.05 0 3.7-1.65 3.7-3.7V3.7C20 1.65 18.35 0 16.3 0zM6 17H3V7h3v10zM4.5 5.5c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zM17 17h-3v-5.5c0-1.3-.8-2.5-2-2.5-1.2 0-2 .8-2 2.5V17z" clip-rule="evenodd"></svg>
+            
+            <a href="https://www.linkedin.com/in/k-lee-marks-3693512b/" target="_blank" class="px-8 py-3 border-2 border-gray-400 text-gray-700 rounded-full font-semibold text-lg hover:bg-gray-50 transition-all">
                 LinkedIn
             </a>
-            <a href="https://github.com/ckelimarks" target="_blank" class="btn border border-gray-600 text-gray-600 px-8 py-3 rounded-full hover:bg-gray-50 font-semibold text-lg flex items-center justify-center">
-                <svg class="w-5 h-5 mr-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10 0C4.477 0 0 4.477 0 10c0 4.418 2.865 8.167 6.839 9.488.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.604-3.369-1.341-3.369-1.341-.454-1.153-1.107-1.462-1.107-1.462-.908-.62.069-.608.069-.608 1.004.07 1.532 1.03 1.532 1.03.89 1.529 2.336 1.088 2.903.832.09-.645.35-1.088.636-1.338-2.22-.253-4.555-1.11-4.555-4.943 0-1.09.39-1.984 1.03-2.682-.104-.253-.448-1.27.098-2.65S8.57 3.08 10 3.08c1.43 0 2.684.53 3.32 1.393.546 1.38.202 2.4-.098 2.65.64.698 1.03 1.592 1.03 2.682 0 3.84-2.339 4.686-4.566 4.935.359.308.678.915.678 1.846 0 1.33-.012 2.408-.012 2.73 0 .268.18.579.688.482C17.135 18.164 20 14.418 20 10c0-5.523-4.477-10-10-10z" clip-rule="evenodd"></svg>
+            <a href="https://github.com/k-lee-marks" target="_blank" class="px-8 py-3 border-2 border-gray-400 text-gray-700 rounded-full font-semibold text-lg hover:bg-gray-50 transition-all">
                 GitHub
             </a>
         </div>
     </section>
 
-    <footer class="bg-gray-800 text-white py-8 px-4 sm:px-6 lg:px-8 text-center rounded-t-3xl">
+    <footer class="bg-gray-900 text-gray-400 py-12 px-4 sm:px-6 lg:px-8 text-center border-t border-gray-800">
         <p>&copy; <span id="current-year"></span> K-Lee Marks. All rights reserved.</p>
     </footer>
 
