Add Zero Gravity sensory deprivation spa project
- Add new portfolio project: Zero Gravity mobile app
- Position after AIHelper Mac App as project #7
- Include mobile UI/UX design and IoT integration details
- Highlight Agile development and hardware collaboration
- Update project image from Untitled design.jpg
- Renumber all subsequent projects to maintain order
- Adjust alternating left-right image pattern throughout portfolio

--- a/index.html
+++ b/index.html
@@ -332,12 +332,30 @@
                 </div>
             </div>
 
-            <!-- Project 7: Root Code - Left Image -->
+            <!-- Project 7: Zero Gravity - Left Image -->
             <div class="grid grid-cols-1 md:grid-cols-2 gap-12 md:gap-16 items-center mb-24 md:mb-32">
                 <div data-aos="fade-right">
-                    <img src="https://podcast-farm.com/projects/gitsite/root-code.png" alt="Root Code Game" class="project-image">
+                    <img src="https://podcast-farm.com/projects/gitsite/Untitled%20design.jpg" alt="Zero Gravity Sensory Deprivation Spa App" class="project-image">
                 </div>
                 <div data-aos="fade-left">
+                    <h3 class="text-3xl font-bold mb-4 text-gray-800">Zero Gravity</h3>
+                    <p class="text-lg text-gray-600 mb-6">Designed the mobile UI/UX and led Agile development of a nationwide sensory deprivation tank control system. The app enables staff to monitor clients and manage lighting, temperature, filtration, audio, and session timing. Collaborated with hardware and electrical engineering teams to deploy 12+ installations with remote monitoring and diagnostics.</p>
+                    <div class="flex flex-wrap gap-x-4 gap-y-2 mb-8 text-blue-600 text-sm font-medium">
+                        <span>Mobile App Design</span> <span>/</span> <span>UI/UX</span> <span>/</span> <span>IoT Integration</span> <span>/</span> <span>Agile Development</span>
+                    </div>
+                    <div class="flex space-x-4">
+                        <a href="#" target="_blank" class="px-6 py-2 border border-gray-400 text-gray-700 rounded-full font-semibold text-sm hover:bg-blue-600 hover:text-white hover:border-blue-600 transition-all">View Case Study</a>
+                        <a href="#" target="_blank" class="px-6 py-2 border border-gray-400 text-gray-700 rounded-full font-semibold text-sm hover:bg-blue-600 hover:text-white hover:border-blue-600 transition-all">Learn More</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Project 8: Root Code - Right Image -->
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-12 md:gap-16 items-center mb-24 md:mb-32">
+                <div class="md:order-last" data-aos="fade-left">
+                    <img src="https://podcast-farm.com/projects/gitsite/root-code.png" alt="Root Code Game" class="project-image">
+                </div>
+                <div data-aos="fade-right">
                     <h3 class="text-3xl font-bold mb-4 text-gray-800">Root Code</h3>
                     <p class="text-lg text-gray-600 mb-6">A 3D isometric soulslike game that combines Vampire Survivors' progression with a narrative exploring humanity's future and AI. Built in Godot 4, featuring branching storylines, hidden lore, and soulslike combat mechanics.</p>
                     <div class="flex flex-wrap gap-x-4 gap-y-2 mb-8 text-blue-600 text-sm font-medium">
@@ -350,12 +368,12 @@
                 </div>
             </div>
 
-            <!-- Project 8: Jobi - Right Image -->
+            <!-- Project 9: Jobi - Left Image -->
             <div class="grid grid-cols-1 md:grid-cols-2 gap-12 md:gap-16 items-center mb-24 md:mb-32">
-                <div class="md:order-last" data-aos="fade-left">
+                <div data-aos="fade-right">
                     <img src="https://podcast-farm.com/projects/gitsite/jobithumb.png" alt="Jobi AI Resume Assistant" class="project-image">
                 </div>
-                <div data-aos="fade-right">
+                <div data-aos="fade-left">
                     <h3 class="text-3xl font-bold mb-4 text-gray-800">Jobi</h3>
                     <p class="text-lg text-gray-600 mb-6">An AI-powered job search and resume optimization platform that streamlines the application process. Features include automated job matching, AI-generated ATS-optimized resumes, and personalized cover letters.</p>
                     <div class="flex flex-wrap gap-x-4 gap-y-2 mb-8 text-blue-600 text-sm font-medium">
@@ -368,12 +386,12 @@
                 </div>
             </div>
 
-            <!-- Project 9: StarSeed Odyssey - Left Image -->
+            <!-- Project 10: StarSeed Odyssey - Right Image -->
             <div class="grid grid-cols-1 md:grid-cols-2 gap-12 md:gap-16 items-center mb-24 md:mb-32">
-                <div data-aos="fade-right">
+                <div class="md:order-last" data-aos="fade-left">
                     <img src="http://www.podcast-farm.com/projects/StarSeed/starseed2.jpg" alt="StarSeed Odyssey Project" class="project-image">
                 </div>
-                <div data-aos="fade-left">
+                <div data-aos="fade-right">
                     <h3 class="text-3xl font-bold mb-4 text-gray-800">StarSeed Odyssey</h3>
                     <p class="text-lg text-gray-600 mb-6">This project involved building a mini solar system simulation, and demonstrated my ability to build a full game demo. It was built using three.js and aimed to tell a short but powerful story.</p>
                     <div class="flex flex-wrap gap-x-4 gap-y-2 mb-8 text-blue-600 text-sm font-medium">
@@ -386,12 +404,12 @@
                 </div>
             </div>
 
-            <!-- Project 10: DriftNote P2P - Right Image -->
+            <!-- Project 11: DriftNote P2P - Left Image -->
             <div class="grid grid-cols-1 md:grid-cols-2 gap-12 md:gap-16 items-center mb-24 md:mb-32">
-                <div class="md:order-last" data-aos="fade-left">
+                <div data-aos="fade-right">
                     <img src="https://podcast-farm.com/projects/gitsite/driftnotethumb.png" alt="DriftNote P2P Project" class="project-image">
                 </div>
-                <div data-aos="fade-right">
+                <div data-aos="fade-left">
                     <h3 class="text-3xl font-bold mb-4 text-gray-800">DriftNote P2P</h3>
                     <p class="text-lg text-gray-600 mb-6">A React-based peer-to-peer application that reimagines the concept of messages in bottles for the digital age. Users can record audio messages that drift through a P2P network.</p>
                     <div class="flex flex-wrap gap-x-4 gap-y-2 mb-8 text-blue-600 text-sm font-medium">
@@ -404,12 +422,12 @@
                 </div>
             </div>
 
-            <!-- Project 11: EchoSonia - Left Image -->
+            <!-- Project 12: EchoSonia - Right Image -->
             <div class="grid grid-cols-1 md:grid-cols-2 gap-12 md:gap-16 items-center mb-24 md:mb-32">
-                <div data-aos="fade-right">
+                <div class="md:order-last" data-aos="fade-left">
                     <img src="https://podcast-farm.com/projects/gitsite/echosoniascreen.png" alt="EchoSonia" class="project-image">
                 </div>
-                <div data-aos="fade-left">
+                <div data-aos="fade-right">
                     <h3 class="text-3xl font-bold mb-4 text-gray-800">EchoSonia</h3>
                     <p class="text-lg text-gray-600 mb-6">A first-person WebXR exploration game where players navigate a dark environment using echolocation mechanics. Features immersive VR support, dynamic particle-based sound visualization, and physics-based interactions.</p>
                     <div class="flex flex-wrap gap-x-4 gap-y-2 mb-8 text-blue-600 text-sm font-medium">
@@ -422,12 +440,12 @@
                 </div>
             </div>
 
-            <!-- Project 12: IdeaForge - Right Image -->
+            <!-- Project 13: IdeaForge - Left Image -->
             <div class="grid grid-cols-1 md:grid-cols-2 gap-12 md:gap-16 items-center mb-24 md:mb-32">
-                <div class="md:order-last" data-aos="fade-left">
+                <div data-aos="fade-right">
                     <img src="https://podcast-farm.com/projects/gitsite/ideaforgelogo.png" alt="IdeaForge AI Assistant" class="project-image">
                 </div>
-                <div data-aos="fade-right">
+                <div data-aos="fade-left">
                     <h3 class="text-3xl font-bold mb-4 text-gray-800">IdeaForge</h3>
                     <p class="text-lg text-gray-600 mb-6">An AI-powered idea development platform inspired by Jarvis, designed to transform concepts into shipped products. Features include AI-enhanced idea validation, automated work breakdown structures, and Kanban boards.</p>
                     <div class="flex flex-wrap gap-x-4 gap-y-2 mb-8 text-blue-600 text-sm font-medium">
@@ -480,12 +498,12 @@
             </div>
             -->
 
-            <!-- Project 13: Humanity's Codex - Left Image -->
+            <!-- Project 14: Humanity's Codex - Right Image -->
             <div class="grid grid-cols-1 md:grid-cols-2 gap-12 md:gap-16 items-center mb-24 md:mb-32">
-                <div data-aos="fade-right">
+                <div class="md:order-last" data-aos="fade-left">
                     <img src="https://podcast-farm.com/projects/gitsite/treasuretrove2.png" alt="Humanity's Codex" class="project-image">
                 </div>
-                <div data-aos="fade-left">
+                <div data-aos="fade-right">
                     <h3 class="text-3xl font-bold mb-4 text-gray-800">Humanity's Codex</h3>
                     <p class="text-lg text-gray-600 mb-6">An interactive digital time capsule that maps and preserves humanity's collective wisdom across disciplines. Features a Wikipedia API-powered knowledge graph connecting physics, art, psychology, and spirituality with interactive visualizations.</p>
                     <div class="flex flex-wrap gap-x-4 gap-y-2 mb-8 text-blue-600 text-sm font-medium">
