Add LoveNotes SaaS project
- Add new LoveNotes project as project 6 (SMS-first relationship SaaS)
- Update all subsequent project numbers and alternating left/right layout
- Projects now properly alternate: left, right, left, right pattern
- LoveNotes positioned after Relationship Safety Check to group relationship-focused projects

--- a/index.html
+++ b/index.html
@@ -322,12 +322,30 @@
                 </div>
             </div>
 
-            <!-- Project 6: AIHelper Mac App - Right Image -->
+            <!-- Project 6: LoveNotes - Right Image -->
             <div class="grid grid-cols-1 md:grid-cols-2 gap-12 md:gap-16 items-center mb-24 md:mb-32">
                 <div class="md:order-last" data-aos="fade-left">
-                    <img src="https://podcast-farm.com/projects/gitsite/aihelper.png" alt="AIHelper Mac App" class="project-image">
+                    <img src="https://placehold.co/600x400/f8fafc/3b82f6?text=LoveNotes" alt="LoveNotes SMS Relationship SaaS" class="project-image">
                 </div>
                 <div data-aos="fade-right">
+                    <h3 class="text-3xl font-bold mb-4 text-gray-800">LoveNotes</h3>
+                    <p class="text-lg text-gray-600 mb-6">An SMS-first relationship SaaS for couples who want to stay together. Delivers daily prompts and weekly "Love Letters" to help couples stay connected. Designed the end-to-end system including architecture, prompts, and state machine. Led user research, built the roadmap, and created a full QA suite. Successfully launched MVP to 3 couples.</p>
+                    <div class="flex flex-wrap gap-x-4 gap-y-2 mb-8 text-blue-600 text-sm font-medium">
+                        <span>Product Management</span> <span>/</span> <span>UX</span> <span>/</span> <span>User Research</span> <span>/</span> <span>QA</span>
+                    </div>
+                    <div class="flex space-x-4">
+                        <a href="#" target="_blank" class="px-6 py-2 border border-gray-400 text-gray-700 rounded-full font-semibold text-sm hover:bg-blue-600 hover:text-white hover:border-blue-600 transition-all">Learn More</a>
+                        <a href="#" target="_blank" class="px-6 py-2 border border-gray-400 text-gray-700 rounded-full font-semibold text-sm hover:bg-blue-600 hover:text-white hover:border-blue-600 transition-all">Case Study</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Project 7: AIHelper Mac App - Left Image -->
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-12 md:gap-16 items-center mb-24 md:mb-32">
+                <div data-aos="fade-right">
+                    <img src="https://podcast-farm.com/projects/gitsite/aihelper.png" alt="AIHelper Mac App" class="project-image">
+                </div>
+                <div data-aos="fade-left">
                     <h3 class="text-3xl font-bold mb-4 text-gray-800">AIHelper Mac App</h3>
                     <p class="text-lg text-gray-600 mb-6">A native macOS menu bar application that provides seamless AI assistance across your system. Features include system-wide text selection processing, multi-conversation management, and persistent chat history.</p>
                     <div class="flex flex-wrap gap-x-4 gap-y-2 mb-8 text-blue-600 text-sm font-medium">
@@ -340,12 +358,12 @@
                 </div>
             </div>
 
-            <!-- Project 7: Zero Gravity - Left Image -->
+            <!-- Project 8: Zero Gravity - Right Image -->
             <div class="grid grid-cols-1 md:grid-cols-2 gap-12 md:gap-16 items-center mb-24 md:mb-32">
-                <div data-aos="fade-right">
+                <div class="md:order-last" data-aos="fade-left">
                     <img src="https://podcast-farm.com/projects/gitsite/Untitled%20design.jpg" alt="Zero Gravity Sensory Deprivation Spa App" class="project-image">
                 </div>
-                <div data-aos="fade-left">
+                <div data-aos="fade-right">
                     <h3 class="text-3xl font-bold mb-4 text-gray-800">Zero Gravity</h3>
                     <p class="text-lg text-gray-600 mb-6">Designed the mobile UI/UX and led Agile development of a nationwide sensory deprivation tank control system. The app enables staff to monitor clients and manage lighting, temperature, filtration, audio, and session timing. Collaborated with hardware and electrical engineering teams to deploy 12+ installations with remote monitoring and diagnostics.</p>
                     <div class="flex flex-wrap gap-x-4 gap-y-2 mb-8 text-blue-600 text-sm font-medium">
@@ -358,12 +376,12 @@
                 </div>
             </div>
 
-            <!-- Project 8: Root Code - Right Image -->
+            <!-- Project 9: Root Code - Left Image -->
             <div class="grid grid-cols-1 md:grid-cols-2 gap-12 md:gap-16 items-center mb-24 md:mb-32">
-                <div class="md:order-last" data-aos="fade-left">
+                <div data-aos="fade-right">
                     <img src="https://podcast-farm.com/projects/gitsite/root-code.png" alt="Root Code Game" class="project-image">
                 </div>
-                <div data-aos="fade-right">
+                <div data-aos="fade-left">
                     <h3 class="text-3xl font-bold mb-4 text-gray-800">Root Code</h3>
                     <p class="text-lg text-gray-600 mb-6">A 3D isometric soulslike game that combines Vampire Survivors' progression with a narrative exploring humanity's future and AI. Built in Godot 4, featuring branching storylines, hidden lore, and soulslike combat mechanics.</p>
                     <div class="flex flex-wrap gap-x-4 gap-y-2 mb-8 text-blue-600 text-sm font-medium">
@@ -376,12 +394,12 @@
                 </div>
             </div>
 
-            <!-- Project 9: Jobi - Left Image -->
+            <!-- Project 10: Jobi - Right Image -->
             <div class="grid grid-cols-1 md:grid-cols-2 gap-12 md:gap-16 items-center mb-24 md:mb-32">
-                <div data-aos="fade-right">
+                <div class="md:order-last" data-aos="fade-left">
                     <img src="https://podcast-farm.com/projects/gitsite/jobithumb.png" alt="Jobi AI Resume Assistant" class="project-image">
                 </div>
-                <div data-aos="fade-left">
+                <div data-aos="fade-right">
                     <h3 class="text-3xl font-bold mb-4 text-gray-800">Jobi</h3>
                     <p class="text-lg text-gray-600 mb-6">An AI-powered job search and resume optimization platform that streamlines the application process. Features include automated job matching, AI-generated ATS-optimized resumes, and personalized cover letters.</p>
                     <div class="flex flex-wrap gap-x-4 gap-y-2 mb-8 text-blue-600 text-sm font-medium">
@@ -394,12 +412,12 @@
                 </div>
             </div>
 
-            <!-- Project 10: StarSeed Odyssey - Right Image -->
+            <!-- Project 11: StarSeed Odyssey - Left Image -->
             <div class="grid grid-cols-1 md:grid-cols-2 gap-12 md:gap-16 items-center mb-24 md:mb-32">
-                <div class="md:order-last" data-aos="fade-left">
+                <div data-aos="fade-right">
                     <img src="http://www.podcast-farm.com/projects/StarSeed/starseed2.jpg" alt="StarSeed Odyssey Project" class="project-image">
                 </div>
-                <div data-aos="fade-right">
+                <div data-aos="fade-left">
                     <h3 class="text-3xl font-bold mb-4 text-gray-800">StarSeed Odyssey</h3>
                     <p class="text-lg text-gray-600 mb-6">This project involved building a mini solar system simulation, and demonstrated my ability to build a full game demo. It was built using three.js and aimed to tell a short but powerful story.</p>
                     <div class="flex flex-wrap gap-x-4 gap-y-2 mb-8 text-blue-600 text-sm font-medium">
@@ -412,12 +430,12 @@
                 </div>
             </div>
 
-            <!-- Project 11: DriftNote P2P - Left Image -->
+            <!-- Project 12: DriftNote P2P - Right Image -->
             <div class="grid grid-cols-1 md:grid-cols-2 gap-12 md:gap-16 items-center mb-24 md:mb-32">
-                <div data-aos="fade-right">
+                <div class="md:order-last" data-aos="fade-left">
                     <img src="https://podcast-farm.com/projects/gitsite/driftnotethumb.png" alt="DriftNote P2P Project" class="project-image">
                 </div>
-                <div data-aos="fade-left">
+                <div data-aos="fade-right">
                     <h3 class="text-3xl font-bold mb-4 text-gray-800">DriftNote P2P</h3>
                     <p class="text-lg text-gray-600 mb-6">A React-based peer-to-peer application that reimagines the concept of messages in bottles for the digital age. Users can record audio messages that drift through a P2P network.</p>
                     <div class="flex flex-wrap gap-x-4 gap-y-2 mb-8 text-blue-600 text-sm font-medium">
@@ -430,12 +448,12 @@
                 </div>
             </div>
 
-            <!-- Project 12: EchoSonia - Right Image -->
+            <!-- Project 13: EchoSonia - Left Image -->
             <div class="grid grid-cols-1 md:grid-cols-2 gap-12 md:gap-16 items-center mb-24 md:mb-32">
-                <div class="md:order-last" data-aos="fade-left">
+                <div data-aos="fade-right">
                     <img src="https://podcast-farm.com/projects/gitsite/echosoniascreen.png" alt="EchoSonia" class="project-image">
                 </div>
-                <div data-aos="fade-right">
+                <div data-aos="fade-left">
                     <h3 class="text-3xl font-bold mb-4 text-gray-800">EchoSonia</h3>
                     <p class="text-lg text-gray-600 mb-6">A first-person WebXR exploration game where players navigate a dark environment using echolocation mechanics. Features immersive VR support, dynamic particle-based sound visualization, and physics-based interactions.</p>
                     <div class="flex flex-wrap gap-x-4 gap-y-2 mb-8 text-blue-600 text-sm font-medium">
@@ -448,12 +466,12 @@
                 </div>
             </div>
 
-            <!-- Project 13: IdeaForge - Left Image -->
+            <!-- Project 14: IdeaForge - Right Image -->
             <div class="grid grid-cols-1 md:grid-cols-2 gap-12 md:gap-16 items-center mb-24 md:mb-32">
-                <div data-aos="fade-right">
+                <div class="md:order-last" data-aos="fade-left">
                     <img src="https://podcast-farm.com/projects/gitsite/ideaforgelogo.png" alt="IdeaForge AI Assistant" class="project-image">
                 </div>
-                <div data-aos="fade-left">
+                <div data-aos="fade-right">
                     <h3 class="text-3xl font-bold mb-4 text-gray-800">IdeaForge</h3>
                     <p class="text-lg text-gray-600 mb-6">An AI-powered idea development platform inspired by Jarvis, designed to transform concepts into shipped products. Features include AI-enhanced idea validation, automated work breakdown structures, and Kanban boards.</p>
                     <div class="flex flex-wrap gap-x-4 gap-y-2 mb-8 text-blue-600 text-sm font-medium">
@@ -466,7 +484,7 @@
                 </div>
             </div>
 
-            <!-- Project 11: InnerSearch - Left Image -->
+            <!-- Project 15: InnerSearch - Left Image -->
             <!-- COMMENTED OUT
             <div class="grid grid-cols-1 md:grid-cols-2 gap-12 md:gap-16 items-center mb-24 md:mb-32">
                 <div data-aos="fade-right">
@@ -486,13 +504,13 @@
             </div>
             -->
 
-            <!-- Project 13: Harmonic Explorer - Left Image -->
+            <!-- Project 16: Harmonic Explorer - Right Image -->
             <!-- COMMENTED OUT
             <div class="grid grid-cols-1 md:grid-cols-2 gap-12 md:gap-16 items-center mb-24 md:mb-32">
-                <div data-aos="fade-right">
+                <div class="md:order-last" data-aos="fade-left">
                     <img src="https://placehold.co/600x400/f8fafc/3b82f6?text=Harmonic+Explorer" alt="Harmonic Explorer" class="project-image">
                 </div>
-                <div data-aos="fade-left">
+                <div data-aos="fade-right">
                     <h3 class="text-3xl font-bold mb-4 text-gray-800">Harmonic Explorer</h3>
                     <p class="text-lg text-gray-600 mb-6">A music theory tool that democratizes chord progression creation by leveraging harmonic theory, cadences, and modal interchange. Users can generate musically coherent chord progressions guided by the circle of fifths.</p>
                     <div class="flex flex-wrap gap-x-4 gap-y-2 mb-8 text-blue-600 text-sm font-medium">
@@ -506,12 +524,12 @@
             </div>
             -->
 
-            <!-- Project 14: Humanity's Codex - Right Image -->
+            <!-- Project 15: Humanity's Codex - Left Image -->
             <div class="grid grid-cols-1 md:grid-cols-2 gap-12 md:gap-16 items-center mb-24 md:mb-32">
-                <div class="md:order-last" data-aos="fade-left">
+                <div data-aos="fade-right">
                     <img src="https://podcast-farm.com/projects/gitsite/treasuretrove2.png" alt="Humanity's Codex" class="project-image">
                 </div>
-                <div data-aos="fade-right">
+                <div data-aos="fade-left">
                     <h3 class="text-3xl font-bold mb-4 text-gray-800">Humanity's Codex</h3>
                     <p class="text-lg text-gray-600 mb-6">An interactive digital time capsule that maps and preserves humanity's collective wisdom across disciplines. Features a Wikipedia API-powered knowledge graph connecting physics, art, psychology, and spirituality with interactive visualizations.</p>
                     <div class="flex flex-wrap gap-x-4 gap-y-2 mb-8 text-blue-600 text-sm font-medium">
