--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
             <!-- Project 6: LoveNotes - Right Image -->
             <div class="grid grid-cols-1 md:grid-cols-2 gap-12 md:gap-16 items-center mb-24 md:mb-32">
                 <div class="md:order-last" data-aos="fade-left">
-                    <img src="https://placehold.co/600x400/f8fafc/3b82f6?text=LoveNotes" alt="LoveNotes SMS Relationship SaaS" class="project-image">
+                    <img src="https://podcast-farm.com/projects/gitsite/LoveNotesMockup.jpg" alt="LoveNotes SMS Relationship SaaS" class="project-image">
                 </div>
                 <div data-aos="fade-right">
                     <h3 class="text-3xl font-bold mb-4 text-gray-800">LoveNotes</h3>
@@ -334,8 +334,7 @@
                         <span>Product Management</span> <span>/</span> <span>UX</span> <span>/</span> <span>User Research</span> <span>/</span> <span>QA</span>
                     </div>
                     <div class="flex space-x-4">
-                        <a href="#" target="_blank" class="px-6 py-2 border border-gray-400 text-gray-700 rounded-full font-semibold text-sm hover:bg-blue-600 hover:text-white hover:border-blue-600 transition-all">Learn More</a>
-                        <a href="#" target="_blank" class="px-6 py-2 border border-gray-400 text-gray-700 rounded-full font-semibold text-sm hover:bg-blue-600 hover:text-white hover:border-blue-600 transition-all">Case Study</a>
+                        <a href="#" class="px-6 py-2 border border-gray-400 text-gray-700 rounded-full font-semibold text-sm cursor-default">Coming Soon</a>
                     </div>
                 </div>
             </div>
