Update HarmonySync thumbnail to HarmonySyncMockup.jpg

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
             <!-- Project 1: HarmonySync - Left Image -->
             <div class="grid grid-cols-1 md:grid-cols-2 gap-12 md:gap-16 items-center mb-24 md:mb-32">
                 <div data-aos="fade-right">
-                    <img src="http://www.podcast-farm.com/projects/gitsite/harmonysyncmockup.png" alt="HarmonySync Project" class="project-image">
+                    <img src="https://podcast-farm.com/projects/gitsite/HarmonySyncMockup.jpg" alt="HarmonySync Project" class="project-image">
                 </div>
                 <div data-aos="fade-left">
                     <h3 class="text-3xl font-bold mb-4 text-gray-800">HarmonySync</h3>
