--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 gap-16 items-center">
                 <div data-aos="fade-right">
                     <h2 class="text-sm font-bold tracking-widest text-blue-600 uppercase mb-3">About Me</h2>
+                    <h3 class="text-3xl md:text-4xl font-bold text-slate-900 mb-6">Human-Centered Product Manager</h3>
                     <div class="space-y-4 text-slate-600 text-lg leading-relaxed">
                         <p>
                             I design and lead products that solve real human problems — from relationship repair and emotional wellbeing to creator growth and learning systems.
