--- a/index.html
+++ b/index.html
@@ -260,6 +260,34 @@
             </div>
 
             <div class="group relative grid grid-cols-1 md:grid-cols-12 gap-8 md:gap-12 items-center mb-24 md:mb-32">
+                <div class="md:col-span-7 md:order-last" data-aos="fade-left">
+                    <div class="project-image-container bg-slate-100">
+                        <img src="https://podcast-farm.com/projects/gitsite/LoveNotesPortfolioImage.png" alt="LoveNotes" class="project-image w-full h-auto object-cover">
+                    </div>
+                </div>
+                <div class="md:col-span-5" data-aos="fade-right">
+                    <div class="flex items-center gap-2 mb-4">
+                        <span class="w-8 h-[2px] bg-blue-600"></span>
+                        <span class="text-blue-600 font-bold uppercase tracking-widest text-xs">End-to-End Product</span>
+                    </div>
+                    <h3 class="text-3xl font-bold text-slate-900 mb-4">LoveNotes</h3>
+                    <p class="text-slate-600 leading-relaxed mb-6">SMS-first relationship SaaS. Designed the architecture, prompts, and state machine. Led user research, roadmap, and QA. MVP launched to early users.</p>
+                    
+                    <div class="flex flex-wrap gap-2 mb-8">
+                        <span class="px-3 py-1 bg-slate-100 text-slate-600 text-xs font-medium rounded-full">Product Mgmt</span>
+                        <span class="px-3 py-1 bg-slate-100 text-slate-600 text-xs font-medium rounded-full">UX Research</span>
+                        <span class="px-3 py-1 bg-slate-100 text-slate-600 text-xs font-medium rounded-full">QA</span>
+                    </div>
+
+                    <div class="flex gap-4">
+                        <span class="px-6 py-2.5 bg-slate-100 text-slate-500 text-sm font-medium rounded-full cursor-not-allowed flex items-center gap-2">
+                            <i data-lucide="lock" class="w-4 h-4"></i> Beta Access Only
+                        </span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="group relative grid grid-cols-1 md:grid-cols-12 gap-8 md:gap-12 items-center mb-24 md:mb-32">
                 <div class="md:col-span-7" data-aos="fade-right">
                     <div class="project-image-container bg-slate-100">
                         <img src="https://podcast-farm.com/projects/gitsite/HarmonySyncMockup.jpg" alt="HarmonySync" class="project-image w-full h-auto object-cover">
@@ -397,34 +425,6 @@
                         <a href="relationship-radar.html" class="px-6 py-2.5 bg-slate-900 text-white text-sm font-medium rounded-full hover:bg-slate-800 transition-colors flex items-center gap-2">
                             <i data-lucide="play-circle" class="w-4 h-4"></i> Try Tool
                         </a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="group relative grid grid-cols-1 md:grid-cols-12 gap-8 md:gap-12 items-center mb-24 md:mb-32">
-                <div class="md:col-span-7 md:order-last" data-aos="fade-left">
-                    <div class="project-image-container bg-slate-100">
-                        <img src="https://podcast-farm.com/projects/gitsite/LoveNotesMockup.jpg" alt="LoveNotes" class="project-image w-full h-auto object-cover">
-                    </div>
-                </div>
-                <div class="md:col-span-5" data-aos="fade-right">
-                    <div class="flex items-center gap-2 mb-4">
-                        <span class="w-8 h-[2px] bg-blue-600"></span>
-                        <span class="text-blue-600 font-bold uppercase tracking-widest text-xs">End-to-End Product</span>
-                    </div>
-                    <h3 class="text-3xl font-bold text-slate-900 mb-4">LoveNotes</h3>
-                    <p class="text-slate-600 leading-relaxed mb-6">SMS-first relationship SaaS. Designed the architecture, prompts, and state machine. Led user research, roadmap, and QA. MVP launched to early users.</p>
-                    
-                    <div class="flex flex-wrap gap-2 mb-8">
-                        <span class="px-3 py-1 bg-slate-100 text-slate-600 text-xs font-medium rounded-full">Product Mgmt</span>
-                        <span class="px-3 py-1 bg-slate-100 text-slate-600 text-xs font-medium rounded-full">UX Research</span>
-                        <span class="px-3 py-1 bg-slate-100 text-slate-600 text-xs font-medium rounded-full">QA</span>
-                    </div>
-
-                    <div class="flex gap-4">
-                        <span class="px-6 py-2.5 bg-slate-100 text-slate-500 text-sm font-medium rounded-full cursor-not-allowed flex items-center gap-2">
-                            <i data-lucide="lock" class="w-4 h-4"></i> Beta Access Only
-                        </span>
                     </div>
                 </div>
             </div>
