Scale down background thumbnails in Experiments section

--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                 <!-- StarSeed Odyssey -->
                 <div class="relative overflow-hidden bg-slate-50 p-6 rounded-2xl border border-slate-100" data-aos="fade-up">
-                    <div class="absolute inset-0 z-0 opacity-40 pointer-events-none">
+                    <div class="absolute inset-0 z-0 opacity-20 pointer-events-none">
                         <div class="absolute inset-0 bg-gradient-to-r from-slate-50 via-slate-50/80 to-transparent"></div>
                         <img src="https://images.unsplash.com/photo-1451187580459-43490279c0fa?q=80&w=2072&auto=format&fit=crop" class="w-full h-full object-cover object-right" alt="Space background">
                     </div>
@@ -420,7 +420,7 @@
 
                 <!-- DriftNote P2P -->
                 <div class="relative overflow-hidden bg-slate-50 p-6 rounded-2xl border border-slate-100" data-aos="fade-up" data-aos-delay="100">
-                    <div class="absolute inset-0 z-0 opacity-30 pointer-events-none">
+                    <div class="absolute inset-0 z-0 opacity-20 pointer-events-none">
                         <div class="absolute inset-0 bg-gradient-to-r from-slate-50 via-slate-50/80 to-transparent"></div>
                         <img src="https://images.unsplash.com/photo-1550751827-4bd374c3f58b?q=80&w=2070&auto=format&fit=crop" class="w-full h-full object-cover object-right" alt="Cybersecurity background">
                     </div>
@@ -436,7 +436,7 @@
 
                 <!-- EchoSonia -->
                 <div class="relative overflow-hidden bg-slate-50 p-6 rounded-2xl border border-slate-100" data-aos="fade-up">
-                    <div class="absolute inset-0 z-0 opacity-40 pointer-events-none">
+                    <div class="absolute inset-0 z-0 opacity-20 pointer-events-none">
                         <div class="absolute inset-0 bg-gradient-to-r from-slate-50 via-slate-50/80 to-transparent"></div>
                         <img src="https://images.unsplash.com/photo-1616499370260-485b3e5ed653?q=80&w=2070&auto=format&fit=crop" class="w-full h-full object-cover object-right" alt="VR background">
                     </div>
@@ -452,7 +452,7 @@
 
                 <!-- IdeaForge -->
                 <div class="relative overflow-hidden bg-slate-50 p-6 rounded-2xl border border-slate-100" data-aos="fade-up" data-aos-delay="100">
-                    <div class="absolute inset-0 z-0 opacity-40 pointer-events-none">
+                    <div class="absolute inset-0 z-0 opacity-20 pointer-events-none">
                         <div class="absolute inset-0 bg-gradient-to-r from-slate-50 via-slate-50/80 to-transparent"></div>
                         <img src="https://images.unsplash.com/photo-1620712943543-bcc4688e7485?q=80&w=1965&auto=format&fit=crop" class="w-full h-full object-cover object-right" alt="AI background">
                     </div>
@@ -468,9 +468,9 @@
 
                 <!-- HarmonySync -->
                 <div class="relative overflow-hidden bg-slate-50 p-6 rounded-2xl border border-slate-100" data-aos="fade-up">
-                    <div class="absolute inset-0 z-0 opacity-40 pointer-events-none">
+                    <div class="absolute inset-0 z-0 opacity-20 pointer-events-none">
                         <div class="absolute inset-0 bg-gradient-to-r from-slate-50 via-slate-50/80 to-transparent"></div>
-                        <img src="https://podcast-farm.com/projects/gitsite/HarmonySyncMockup.jpg" class="w-full h-full object-cover object-right" alt="HarmonySync">
+                        <img src="https://podcast-farm.com/projects/gitsite/HarmonySyncMockup.jpg" class="w-full h-full object-cover object-right opacity-75" style="object-position: 80% center;" alt="HarmonySync">
                     </div>
                     <div class="relative z-10">
                         <div class="flex justify-between items-start mb-4">
@@ -484,7 +484,7 @@
 
                 <!-- Safety Check -->
                 <div class="relative overflow-hidden bg-slate-50 p-6 rounded-2xl border border-slate-100" data-aos="fade-up" data-aos-delay="100">
-                    <div class="absolute inset-0 z-0 opacity-40 pointer-events-none">
+                    <div class="absolute inset-0 z-0 opacity-20 pointer-events-none">
                         <div class="absolute inset-0 bg-gradient-to-r from-slate-50 via-slate-50/80 to-transparent"></div>
                         <img src="https://images.unsplash.com/photo-1522315641900-874dc98a7cbb?q=80&w=2070&auto=format&fit=crop" class="w-full h-full object-cover object-right" alt="Safety Check">
                     </div>
@@ -500,9 +500,9 @@
 
                 <!-- Root Code -->
                 <div class="relative overflow-hidden bg-slate-50 p-6 rounded-2xl border border-slate-100" data-aos="fade-up">
-                     <div class="absolute inset-0 z-0 opacity-50 pointer-events-none">
+                     <div class="absolute inset-0 z-0 opacity-20 pointer-events-none">
                         <div class="absolute inset-0 bg-gradient-to-r from-slate-50 via-slate-50/80 to-transparent"></div>
-                        <img src="https://podcast-farm.com/projects/gitsite/root-code.png" class="w-full h-full object-cover object-right" alt="Root Code">
+                        <img src="https://podcast-farm.com/projects/gitsite/root-code.png" class="w-full h-full object-cover object-right opacity-75" style="object-position: 80% center;" alt="Root Code">
                     </div>
                     <div class="relative z-10">
                         <div class="flex justify-between items-start mb-4">
@@ -516,9 +516,9 @@
 
                 <!-- Jobi -->
                 <div class="relative overflow-hidden bg-slate-50 p-6 rounded-2xl border border-slate-100" data-aos="fade-up" data-aos-delay="100">
-                    <div class="absolute inset-0 z-0 opacity-40 pointer-events-none">
+                    <div class="absolute inset-0 z-0 opacity-20 pointer-events-none">
                         <div class="absolute inset-0 bg-gradient-to-r from-slate-50 via-slate-50/80 to-transparent"></div>
-                        <img src="https://podcast-farm.com/projects/gitsite/jobithumb.png" class="w-full h-full object-cover object-right" alt="Jobi">
+                        <img src="https://podcast-farm.com/projects/gitsite/jobithumb.png" class="w-full h-full object-cover object-right opacity-75" style="object-position: 80% center;" alt="Jobi">
                     </div>
                     <div class="relative z-10">
                         <div class="flex justify-between items-start mb-4">
@@ -532,9 +532,9 @@
 
                 <!-- AI Helper Mac App -->
                 <div class="relative overflow-hidden bg-slate-50 p-6 rounded-2xl border border-slate-100" data-aos="fade-up">
-                    <div class="absolute inset-0 z-0 opacity-40 pointer-events-none">
+                    <div class="absolute inset-0 z-0 opacity-20 pointer-events-none">
                         <div class="absolute inset-0 bg-gradient-to-r from-slate-50 via-slate-50/80 to-transparent"></div>
-                        <img src="https://podcast-farm.com/projects/gitsite/aihelper.png" class="w-full h-full object-cover object-right" alt="AI Helper">
+                        <img src="https://podcast-farm.com/projects/gitsite/aihelper.png" class="w-full h-full object-cover object-right opacity-75" style="object-position: 80% center;" alt="AI Helper">
                     </div>
                     <div class="relative z-10">
                         <div class="flex justify-between items-start mb-4">
